--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cannon": "^0.6.2",
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
+    "file-loader": "^5.0.2",
     "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
