--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@magenta/music": "^1.12.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
